tests/ui/impl-trait/trait_upcasting.stderr
error[E0308]: mismatched types
  --> $DIR/trait_upcasting.rs:10:41
   |
LL | fn hello() -> &'static (dyn Trait<impl Sized> + Send) {
   |                                   ---------- the found opaque type
...
LL |         let _: &'static dyn Trait<()> = x;
   |                ----------------------   ^ expected trait `Trait<()>`, found trait `Trait<impl Sized> + Send`
   |                |
   |                expected due to this
   |
   = note: expected reference `&'static (dyn Trait<()> + 'static)`
              found reference `&dyn Trait<impl Sized> + Send`

error[E0308]: mismatched types
  --> $DIR/trait_upcasting.rs:20:13
   |
LL | fn bye() -> &'static dyn Trait<impl Sized> {
   |                                ---------- the expected opaque type
...
LL |         x = y;
   |             ^ expected trait `Trait<impl Sized>`, found trait `Trait<()> + Send`
   |
   = note: expected reference `&dyn Trait<impl Sized>`
              found reference `&'static (dyn Trait<()> + Send + 'static)`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
